[package]
name = "burner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
indicatif = "0.16"
log = "0.4"
walkdir = "2.3"
crossterm = "0.23"
libc = "0.2"
rand = "0.8"
